<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 IO Club
  ~
  ~ This file is part of Workyras.
  ~
  ~ Workyras is free software: you can redistribute it and/or modify
  ~ it under the terms of the Lesser GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Workyras is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ Lesser GNU General Public License for more details.
  ~
  ~ You should have received a copy of the Lesser GNU General Public License
  ~ along with Workyras.  If not, see <https://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/bottom_nav_work">

    <!-- In bottom navigation -->

    <fragment
        android:id="@+id/bottom_nav_work"
        android:name="fyi.ioclub.workyras.ui.work.WorkFragment"
        android:label="@string/bottom_nav_work_title"
        tools:layout="@layout/fragment_work" />

    <fragment
        android:id="@+id/bottom_nav_analysis"
        android:name="fyi.ioclub.workyras.ui.analysis.AnalysisFragment"
        android:label="@string/bottom_nav_analysis_title"
        tools:layout="@layout/fragment_analysis" />

    <fragment
        android:id="@+id/bottom_nav_work_tags"
        android:name="fyi.ioclub.workyras.ui.worktags.WorkTagsFragment"
        android:label="@string/fragment_work_tags_title"
        tools:layout="@layout/fragment_work_tags" />

    <!-- In navigation drawer -->

    <fragment
        android:id="@+id/nav_drawer_work_tag_bin"
        android:name="fyi.ioclub.workyras.ui.worktagbin.WorkTagBinFragment"
        android:label="@string/nav_drawer_work_tag_bin_title" />

    <fragment
        android:id="@+id/nav_drawer_save"
        android:name="fyi.ioclub.workyras.ui.save.SaveFragment"
        android:label="@string/nav_drawer_save_title" />

    <fragment
        android:id="@+id/nav_drawer_settings"
        android:name="fyi.ioclub.workyras.ui.settings.SettingsFragment"
        android:label="@string/nav_drawer_settings_title" />

    <fragment
        android:id="@+id/nav_drawer_about"
        android:name="fyi.ioclub.workyras.ui.about.AboutFragment"
        android:label="@string/nav_drawer_about_title" />

</navigation>