<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 IO Club
  ~
  ~ This file is part of Workyras.
  ~
  ~ Workyras is free software: you can redistribute it and/or modify
  ~ it under the terms of the Lesser GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Workyras is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ Lesser GNU General Public License for more details.
  ~
  ~ You should have received a copy of the Lesser GNU General Public License
  ~ along with Workyras.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/pref_work_tags_title">

        <EditTextPreference
            android:defaultValue="@string/pref_gen_work_tag_id_size_default"
            android:inputType="number"
            android:key="@string/pref_gen_work_tag_id_size_key"
            android:title="@string/pref_gen_work_tag_id_size_title" />

    </PreferenceCategory>

</PreferenceScreen>
