<!--
  ~ Copyright (C) 2025 IO Club
  ~
  ~ This file is part of Workyras.
  ~
  ~ Workyras is free software: you can redistribute it and/or modify
  ~ it under the terms of the Lesser GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Workyras is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ Lesser GNU General Public License for more details.
  ~
  ~ You should have received a copy of the Lesser GNU General Public License
  ~ along with Workyras.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/nav_drawer_work_tag_bin"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/nav_drawer_work_tag_bin_title" />

    <item
        android:id="@id/nav_drawer_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_drawer_save_title" />

    <item
        android:id="@id/nav_drawer_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_drawer_settings_title" />

    <item
        android:id="@id/nav_drawer_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_drawer_about_title" />

</menu>