<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 IO Club
  ~
  ~ This file is part of Workyras.
  ~
  ~ Workyras is free software: you can redistribute it and/or modify
  ~ it under the terms of the Lesser GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Workyras is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ Lesser GNU General Public License for more details.
  ~
  ~ You should have received a copy of the Lesser GNU General Public License
  ~ along with Workyras.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/bottom_nav_work"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/bottom_nav_work_title" />

    <item
        android:id="@id/bottom_nav_analysis"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/bottom_nav_analysis_title" />

    <item
        android:id="@id/bottom_nav_work_tags"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/fragment_work_tags_title" />

    <item
        android:id="@+id/bottom_nav_more"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/bottom_nav_more_title" />

</menu>