<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 IO Club
  ~
  ~ This file is part of Workyras.
  ~
  ~ Workyras is free software: you can redistribute it and/or modify
  ~ it under the terms of the Lesser GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Workyras is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ Lesser GNU General Public License for more details.
  ~
  ~ You should have received a copy of the Lesser GNU General Public License
  ~ along with Workyras.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.work.WorkFragment">

    <TextView
        android:id="@+id/text_view_work_pt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_view_work_pt_default"
        android:textAlignment="center"
        android:textAppearance="@style/WorkPoint"
        app:layout_constraintBottom_toTopOf="@id/spinner_work_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_work_tag_selector_hint"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical|end"
        android:text="@string/text_view_work_tag_selector_hint_text"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@id/spinner_work_tag"
        app:layout_constraintEnd_toStartOf="@id/spinner_work_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinner_work_tag" />

    <Spinner
        android:id="@+id/spinner_work_tag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/spinner_work_tag_description"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/button_work_pick_timestamp_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_view_work_tag_selector_hint"
        app:layout_constraintTop_toBottomOf="@id/text_view_work_pt" />

    <TextView
        android:id="@+id/text_view_button_work_pick_timestamp_start_hint"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical|end"
        android:text="@string/text_view_button_work_pick_timestamp_start_hint_text"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@id/button_work_pick_timestamp_start"
        app:layout_constraintEnd_toStartOf="@id/button_work_pick_timestamp_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_work_pick_timestamp_start" />

    <Button
        android:id="@+id/button_work_pick_timestamp_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/datetime_format"
        app:layout_constraintBottom_toTopOf="@id/button_add_pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_view_button_work_pick_timestamp_start_hint"
        app:layout_constraintTop_toBottomOf="@id/spinner_work_tag"
        app:layout_constraintWidth_max="488dp" />

    <Button
        android:id="@+id/button_add_pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_add_pt_description"
        android:gravity="center"
        android:text="@string/button_add_pt_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_work_pick_timestamp_start" />

</androidx.constraintlayout.widget.ConstraintLayout>