<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025 IO Club
  ~
  ~ This file is part of Workyras.
  ~
  ~ Workyras is free software: you can redistribute it and/or modify
  ~ it under the terms of the Lesser GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Workyras is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ Lesser GNU General Public License for more details.
  ~
  ~ You should have received a copy of the Lesser GNU General Public License
  ~ along with Workyras.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_seek_bar_sigma_min"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/int_format"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_sigma_cache"
        app:layout_constraintEnd_toStartOf="@id/button_set_seek_bar_sigma_cache_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_sigma_cache"
        app:layout_constraintWidth_min="48dp" />

    <ImageButton
        android:id="@+id/button_set_seek_bar_sigma_cache_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_set_seek_bar_sigma_min_description"
        android:src="@android:drawable/ic_media_previous"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_sigma_cache"
        app:layout_constraintEnd_toStartOf="@id/edit_text_sigma_cache"
        app:layout_constraintStart_toEndOf="@id/text_view_seek_bar_sigma_min"
        app:layout_constraintTop_toTopOf="@id/edit_text_sigma_cache"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/edit_text_sigma_cache"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/edit_text_sigma_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/seek_bar_sigma_cache"
        app:layout_constraintEnd_toStartOf="@id/button_set_seek_bar_sigma_cache_max"
        app:layout_constraintStart_toEndOf="@id/button_set_seek_bar_sigma_cache_min"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="488dp" />

    <ImageButton
        android:id="@+id/button_set_seek_bar_sigma_cache_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_set_seek_bar_sigma_max_description"
        android:src="@android:drawable/ic_media_next"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_sigma_cache"
        app:layout_constraintEnd_toStartOf="@id/text_view_seek_bar_sigma_max"
        app:layout_constraintStart_toEndOf="@id/edit_text_sigma_cache"
        app:layout_constraintTop_toTopOf="@id/edit_text_sigma_cache"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/text_view_seek_bar_sigma_max"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/int_format"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_sigma_cache"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_set_seek_bar_sigma_cache_max"
        app:layout_constraintTop_toTopOf="@id/edit_text_sigma_cache"
        app:layout_constraintWidth_min="48dp" />

    <SeekBar
        android:id="@+id/seek_bar_sigma_cache"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_sigma_cache" />

</androidx.constraintlayout.widget.ConstraintLayout>